--- a/dininghall-enhanced/src/App.css
+++ b/dininghall-enhanced/src/App.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Roboto:wght@100&display=swap');
 
 .App {
   text-align: center;
-  background-color : #FDFDE4; 
 }
 
 .App-logo {
